--- a/PFD Challenge 1/PFD Challenge 1.csproj
+++ b/PFD Challenge 1/PFD Challenge 1.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>PFD_Challenge_1</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="DAL\" />
+  </ItemGroup>
+
 </Project>
