--- a/PFD Challenge 1/appsettings.json
+++ b/PFD Challenge 1/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "NPBookConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=NPBookWEB;Integrated Security=True;"
+  }
 }
