--- a/PFD Challenge 1/PFD Challenge 1.csproj
+++ b/PFD Challenge 1/PFD Challenge 1.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <PackageReference Include="Fido2.AspNet" Version="2.0.2" />
+    <PackageReference Include="Microsoft.CognitiveServices.Speech" Version="1.19.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Quartz" Version="3.3.3" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.7" />
@@ -29,6 +30,7 @@
     <PackageReference Include="Quartz.Extensions.DependencyInjection" Version="3.3.3" />
     <PackageReference Include="Quartz.Extensions.Hosting" Version="3.3.3" />
     <PackageReference Include="Quartz.Jobs" Version="3.3.3" />
+    <PackageReference Include="RestSharp" Version="107.1.2" />
     <PackageReference Include="System.Composition.TypedParts" Version="6.0.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
 	 <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
