--- a/PFD Challenge 1/Properties/launchSettings.json
+++ b/PFD Challenge 1/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
@@ -18,10 +18,11 @@
     "PFD_Challenge_1": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
+        "SENDGRID_API_KEY": "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",
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
